--- a/.github/ISSUE_TEMPLATE/collaboration.yml
+++ b/.github/ISSUE_TEMPLATE/collaboration.yml
@@ -1,6 +1,9 @@
+---
 name: New Collaboration
 description: Collaborate with DMind.ai
 title: "[Collaboration] "
+labels: []
+assignees: []
 body:
   - type: markdown
     attributes:
@@ -16,6 +19,7 @@ body:
       label: Project Name
       description: Your project's name (max 50 characters)
       placeholder: My Awesome Project
+    validations:
       required: true
   - type: input
     id: project-url
@@ -23,6 +27,7 @@ body:
       label: Project URL
       description: Your project's website or repository URL
       placeholder: https://github.com/username/project
+    validations:
       required: true
   - type: textarea
     id: description
@@ -30,6 +35,7 @@ body:
       label: Project Description
       description: A brief description of your project and potential collaboration areas (max 200 characters)
       placeholder: What does your project do and how would you like to collaborate with DMind?
+    validations:
       required: true
   - type: input
     id: logo-url
@@ -37,12 +43,13 @@ body:
       label: Logo URL
       description: Direct URL to your project's logo (PNG/JPG, max 200x200px)
       placeholder: https://example.com/logo.png
+    validations:
       required: true
   - type: markdown
     attributes:
       value: |
         ## What's Next?
         - Please wait patiently while we review your collaboration request
-        - We typically respond within 2-3 business days
+        - We typically respond within 1-2 business days
         - For urgent inquiries, contact us at [contact@dmind.ai](mailto:contact@dmind.ai)
         - Visit our website: [dmind.ai](https://dmind.ai) 
