fix: add command to install all dependencies in workflow

--- a/.github/workflows/issue-handler.yml
+++ b/.github/workflows/issue-handler.yml
@@ -65,6 +65,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+      - name: Install dependencies
+        run: npm install
       - name: Process Collaboration
         run: |
           BODY="$(jq -r .issue.body < $GITHUB_EVENT_PATH)"
