fix: add permision to github workflow

--- a/.github/workflows/issue-handler.yml
+++ b/.github/workflows/issue-handler.yml
@@ -1,5 +1,9 @@
 name: Collaboration Handler
 
+permissions:
+  contents: write
+  issues: write
+
 on:
   issues:
     types: [opened, edited, labeled]
