--- a/.github/ISSUE_TEMPLATE/collaboration.yml
+++ b/.github/ISSUE_TEMPLATE/collaboration.yml
@@ -8,9 +8,9 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for your interest in collaborating with DMind.ai!
+        Thanks for your interest in being listed under "Projects Using DMind"!
         
-        DMind is an open-source AGI research organization focused on next-generation digital finance. We welcome new collaborations to help build the future of AI-native innovations.
+        DMind is an open-source AGI research organization focused on next-generation digital finance. We showcase projects that integrate or build with DMind's technology.
         
         Please provide the following information about your project:
   - type: input
@@ -33,8 +33,8 @@ body:
     id: description
     attributes:
       label: Project Description
-      description: A brief description of your project and potential collaboration areas (max 200 characters)
-      placeholder: What does your project do and how would you like to collaborate with DMind?
+      description: A brief description of your project (max 200 characters)
+      placeholder: What does your project do?
     validations:
       required: true
   - type: input
@@ -49,7 +49,7 @@ body:
     attributes:
       value: |
         ## What's Next?
-        - Please wait patiently while we review your collaboration request
+        - Please wait patiently while we review your submission
         - We typically respond within 1-2 business days
         - For urgent inquiries, contact us at [contact@dmind.ai](mailto:contact@dmind.ai)
-        - Visit our website: [dmind.ai](https://dmind.ai) 
+        - Once approved, your project will appear on [dmind.ai](https://dmind.ai) 
